k8s/talos/infra/cilium/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
